add swagger and clean up